// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Utdanningsnivå
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Velg det høyeste utdanningsnivået du har fullført.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="kindergarten"
      name="_r_7_"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Barnehage
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="primary"
      name="_r_7_"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Grunnskole
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="secondary"
      name="_r_7_"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Videregående
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="higher"
      name="_r_7_"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Høyere utdanning
    </label>
  </ds-field>
</fieldset>
<hr
  aria-hidden="true"
  style="<removed>"
>
<p
  data-variant="default"
  style="<removed>"
>
  Du har valgt:
</p>
<div
  data-size="sm"
  style="<removed>"
>
  <button
    data-variant="secondary"
    type="button"
  >
    Velg Barnehage
  </button>
  <button
    data-variant="secondary"
    type="button"
  >
    Velg Grunnskole
  </button>
</div>
`;

exports[`Default 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe
  </legend>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="10-20"
      name="my-group"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="21-45"
      name="my-group"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="46-80"
      name="my-group"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`Disabled 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      disabled
      type="radio"
      value="10-20"
      name="my-disabled"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      disabled
      type="radio"
      value="21-45"
      name="my-disabled"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      disabled
      type="radio"
      value="46-80"
      name="my-disabled"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`Group 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="10-20"
      name="my-group"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="21-45"
      name="my-group"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="46-80"
      name="my-group"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`Read Only 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      readonly
      type="radio"
      value="10-20"
      name="my-readonly"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      readonly
      type="radio"
      value="21-45"
      name="my-readonly"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      readonly
      type="radio"
      value="46-80"
      name="my-readonly"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`With Error 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="true"
      type="radio"
      value="10-20"
      name="my-error"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="true"
      type="radio"
      value="21-45"
      name="my-error"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="true"
      type="radio"
      value="46-80"
      name="my-error"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    id="<removed>"
  >
    Du må velge en aldersgruppe
  </p>
</fieldset>
`;
